# SPIRV-Tools-Extensions

./: .gitignore  CMakeLists.txt  Main.c  WgTile.spvasm
debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/: Substitude.c  Substitude.h
